# ProblemChecker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
checkers/: Checker.hpp  IntChecker.hpp
src/: CMakeLists.txt  main.cpp
src/checker/: checker_concepts.h  checkers.h
src/checkers/: Checker.hpp  FloatChecker.hpp  IntChecker.hpp
src/engine/: engine.hpp
src/engine/checkers/: Checker.hpp  IntChecker.hpp
src/engine/contest/: problem.hpp
test/: CMakeLists.txt  test.cpp  test_checkers.cpp
